syntax = "proto3";

option csharp_namespace = "Aggregator.Common.Proto";

enum ProtoHttpStatusCode{
	PROTO_HTTP_STATUS_CODE_DEFAULT=0;
	PROTO_HTTP_STATUS_CODE_OK=200;
	PROTO_HTTP_STATUS_CODE_CREATED=201;
	PROTO_HTTP_STATUS_CODE_ACCEPTED=202;
	PROTO_HTTP_STATUS_CODE_MULTI_STATUS=207;
	PROTO_HTTP_STATUS_CODE_BAD_REQUEST=400;
	PROTO_HTTP_STATUS_CODE_NOT_FOUND=404;
	PROTO_HTTP_STATUS_CODE_INTERNAL_SERVER_ERROR=500;
}